--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <li><a href="#Campus Life">Campus Life</a></li>
             <li><a href="#Alumni">Alumni</a></li>
             <li><a href="#Academic Calendar">Academic Calendar</a></li>
-            <li><a href="#Request Info">Rquest Info</a></li>
+            <li><a href="#Request Info">Request Info</a></li>
             
         </ul>
 
